updated module scripts and main.md

--- a/scripts/IS_agent/N06_rule_merging.ipynb
+++ b/scripts/IS_agent/N06_rule_merging.ipynb
@@ -34,29 +34,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Engine initialized with 2 facts\n",
-      "Initial facts: [InitialFact(), RaceStatusFact(lap=1, total_laps=60, race_phase='start', track_status='clear')]\n",
-      "\n",
-      "=== TIRE DEGRADATION ANALYSIS ===\n",
-      "Using first predicted rate as current degradation: 0.07\n",
-      "Tire facts declared: {'degradation': DegradationFact(degradation_rate=0.07, predicted_rates=frozenlist([0.07, 0.09, 0.12])), 'telemetry': TelemetryFact(tire_age=4, compound_id=2, driver_number=44, position=1)}\n",
-      "Engine now has 4 facts\n",
-      "\n",
-      "=== LAP TIME PREDICTION ===\n",
-      "Lap time facts declared: {'telemetry': TelemetryFact(driver_number=44, lap_time=80.3, predicted_lap_time=79.9, compound_id=2, tire_age=4, position=1)}\n",
-      "Engine now has 5 facts\n",
-      "\n",
-      "=== RADIO ANALYSIS ===\n",
-      "Radio fact declared: <f-5>\n",
-      "Engine now has 6 facts\n",
-      "\n",
-      "=== ALL ENGINE FACTS ===\n",
-      "Fact 1: InitialFact - <f-0>\n",
-      "Fact 2: RaceStatusFact - <f-1>\n",
-      "Fact 3: DegradationFact - <f-2>\n",
-      "Fact 4: TelemetryFact - <f-3>\n",
-      "Fact 5: TelemetryFact - <f-4>\n",
-      "Fact 6: RadioFact - <f-5>\n",
       "Successfully loaded data from ../../outputs/week5/tire_degradation_fuel_adjusted.csv\n",
       "Loaded degradation data:\n"
      ]
@@ -162,7 +139,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "bd983af4-0e69-44e8-835e-1de29a9f1fc1",
+       "ref": "f54ad553-6916-4d9f-9f06-a8ed2c66bb51",
        "rows": [
         [
          "0",
@@ -721,6 +698,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "1f8e6796",
    "metadata": {},
    "outputs": [
     {
@@ -2430,7 +2408,7 @@
       "================================================================================\n",
       "ANALYZING ALL DRIVERS WITH REAL RADIOS FROM 2023 SPANISH GP\n",
       "================================================================================\n",
-      "Started: 2025-04-23 15:40:17\n",
+      "Started: 2025-04-24 16:06:16\n",
       "Race data loaded: 1180 rows\n",
       "Loading existing radio metadata: ../../outputs\\week6\\radios\\spain_2023_radio_metadata.csv\n",
       "\n",
@@ -2479,7 +2457,7 @@
       "Adding LapNumber column based on sequence\n",
       "Skipping driver 1, stint 3.0: not enough laps\n",
       "Created sequential features: 12 new columns\n",
-      "Removing extra columns: {'LapNumber', 'Unnamed: 0'}\n",
+      "Removing extra columns: {'Unnamed: 0', 'LapNumber'}\n",
       "Making predictions...\n",
       "Prediction performance - RMSE: 0.081s, MAE: 0.049s\n",
       "Predictions complete: 1179 rows\n",
