added app folder with provisional test for checking correct module import

--- a/scripts/IS_agent/N02_degradation_time_rules.ipynb
+++ b/scripts/IS_agent/N02_degradation_time_rules.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -92,13 +92,11 @@
     "from ML_tyre_pred.ML_utils import N02_model_tire_predictions as tdp\n",
     "\n",
     "# Import Experta components\n",
-    "from experta import Rule, NOT, OR, AND, AS, MATCH, TEST, EXISTS\n",
-    "from experta import DefFacts, Fact, Field, KnowledgeEngine\n",
+    "from experta import Rule, MATCH, TEST\n",
     "\n",
     "\n",
     "\n",
     "####################### Import Custom Fact Classes ###################\n",
-    "import utils.N01_agent_setup as agent_setup\n",
     "from utils.N01_agent_setup import (\n",
     "    TelemetryFact,\n",
     "    DegradationFact,\n",
