--- a/scripts/IS_agent/N04_nlp_rules.ipynb
+++ b/scripts/IS_agent/N04_nlp_rules.ipynb
@@ -44,29 +44,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Engine initialized with 2 facts\n",
-      "Initial facts: [InitialFact(), RaceStatusFact(lap=1, total_laps=60, race_phase='start', track_status='clear')]\n",
-      "\n",
-      "=== TIRE DEGRADATION ANALYSIS ===\n",
-      "Using first predicted rate as current degradation: 0.07\n",
-      "Tire facts declared: {'degradation': DegradationFact(degradation_rate=0.07, predicted_rates=frozenlist([0.07, 0.09, 0.12])), 'telemetry': TelemetryFact(tire_age=4, compound_id=2, driver_number=44, position=1)}\n",
-      "Engine now has 4 facts\n",
-      "\n",
-      "=== LAP TIME PREDICTION ===\n",
-      "Lap time facts declared: {'telemetry': TelemetryFact(driver_number=44, lap_time=80.3, predicted_lap_time=79.9, compound_id=2, tire_age=4, position=1)}\n",
-      "Engine now has 5 facts\n",
-      "\n",
-      "=== RADIO ANALYSIS ===\n",
-      "Radio fact declared: <f-5>\n",
-      "Engine now has 6 facts\n",
-      "\n",
-      "=== ALL ENGINE FACTS ===\n",
-      "Fact 1: InitialFact - <f-0>\n",
-      "Fact 2: RaceStatusFact - <f-1>\n",
-      "Fact 3: DegradationFact - <f-2>\n",
-      "Fact 4: TelemetryFact - <f-3>\n",
-      "Fact 5: TelemetryFact - <f-4>\n",
-      "Fact 6: RadioFact - <f-5>\n",
       "Libraries and fact classes loaded successfully.\n"
      ]
     }
@@ -173,7 +150,7 @@
       "    • \"Box this lap for softs,\"\n",
       "  WEATHER:\n",
       "    • \"there's rain expected in 10 minutes\"\n",
-      "Analysis saved to ../../outputs/week4/json/radio_analysis_20250418_164238.json\n"
+      "Analysis saved to ../../outputs/week4/json/radio_analysis_20250427_181454.json\n"
      ]
     }
    ],
@@ -202,7 +179,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Processing json from: ../../outputs/week4/json/radio_analysis_20250418_164238.json\n"
+      "Processing json from: ../../outputs/week4/json/radio_analysis_20250427_181454.json\n"
      ]
     }
    ],
@@ -671,13 +648,7 @@
       "================================================================================\n",
       "Radio message: 'I'm really struggling with grip, the rear feels terrible'\n",
       "\n",
-      "Processing message with NLP pipeline...\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Processing message with NLP pipeline...\n",
       "\n",
       "Analyzing message: \"I'm really struggling with grip, the rear feels terrible\"\n",
       "\n",
@@ -689,8 +660,8 @@
       "  TECHNICAL_ISSUE:\n",
       "    • \"the\"\n",
       "    • \"rear feels terrible\"\n",
-      "Analysis saved to ../../outputs/week4/json/radio_analysis_20250418_164247.json\n",
-      "Analysis saved to: ../../outputs/week4/json/radio_analysis_20250418_164247.json\n",
+      "Analysis saved to ../../outputs/week4/json/radio_analysis_20250427_181501.json\n",
+      "Analysis saved to: ../../outputs/week4/json/radio_analysis_20250427_181501.json\n",
       "\n",
       "Analysis results:\n",
       "Sentiment: negative\n",
@@ -764,8 +735,8 @@
       "    • \"track is getting wet\"\n",
       "  WEATHER:\n",
       "    • \"rain starting\"\n",
-      "Analysis saved to ../../outputs/week4/json/radio_analysis_20250418_164254.json\n",
-      "Analysis saved to: ../../outputs/week4/json/radio_analysis_20250418_164254.json\n",
+      "Analysis saved to ../../outputs/week4/json/radio_analysis_20250427_181507.json\n",
+      "Analysis saved to: ../../outputs/week4/json/radio_analysis_20250427_181507.json\n",
       "\n",
       "Analysis results:\n",
       "Sentiment: neutral\n",
@@ -835,8 +806,8 @@
       "    • \"Safety\"\n",
       "  PIT_CALL:\n",
       "    • \"box box box\"\n",
-      "Analysis saved to ../../outputs/week4/json/radio_analysis_20250418_164301.json\n",
-      "Analysis saved to: ../../outputs/week4/json/radio_analysis_20250418_164301.json\n",
+      "Analysis saved to ../../outputs/week4/json/radio_analysis_20250427_181514.json\n",
+      "Analysis saved to: ../../outputs/week4/json/radio_analysis_20250427_181514.json\n",
       "\n",
       "Analysis results:\n",
       "Sentiment: negative\n",
