finished gap analysis section

--- a/scripts/IS_agent/N06_rule_merging.ipynb
+++ b/scripts/IS_agent/N06_rule_merging.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "e64e0abe",
    "metadata": {},
    "outputs": [
@@ -86,7 +86,7 @@
     "import sys\n",
     "import json\n",
     "import time\n",
-    "\n",
+    "import requests\n",
     "# Import Experta components\n",
     "from experta import Rule, NOT, OR, AND, AS, MATCH, TEST, EXISTS\n",
     "from experta import DefFacts, Fact, Field, KnowledgeEngine\n",
@@ -692,6 +692,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "87b22543",
+   "metadata": {},
+   "source": [
+    "### 3.1 Function to test all rules have been correctly activated\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "id": "5964d8d6",
@@ -1059,6 +1067,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "82ac1caf",
+   "metadata": {},
+   "source": [
+    "### 5.1 Analyze the strategy with no radio (deprecated)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "id": "17f3c245",
@@ -1192,8 +1208,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e7185ce3",
+   "metadata": {},
+   "source": [
+    "### 5.2 Extracting the 2023 Spanish GP radios"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "6df934eb",
    "metadata": {},
    "outputs": [],
@@ -1208,10 +1232,7 @@
     "    Returns:\n",
     "        DataFrame with radio metadata and paths to MP3 files\n",
     "    \"\"\"\n",
-    "    import pandas as pd\n",
-    "    import requests\n",
-    "    import time\n",
-    "    import os\n",
+    "    \n",
     "    \n",
     "    print(f\"\\n{'='*80}\")\n",
     "    print(f\"EXTRACTING TEAM RADIOS FROM 2023 SPANISH GP\")\n",
@@ -1315,6 +1336,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d61d2c8a",
+   "metadata": {},
+   "source": [
+    "### Processing the radios with NLP models "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 11,
    "id": "7c01f0ee",
@@ -1414,8 +1443,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "cfff0b18",
+   "metadata": {},
+   "source": [
+    "### 5.4 Mapping radios to laps\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "17571664",
    "metadata": {},
    "outputs": [],
@@ -1432,8 +1469,6 @@
     "    Returns:\n",
     "        Dict: Mapping of {(driver_number, lap): message_data}\n",
     "    \"\"\"\n",
-    "    import pandas as pd\n",
-    "    import numpy as np\n",
     "    \n",
     "    print(f\"\\n{'='*80}\")\n",
     "    print(f\"MAPPING RADIO MESSAGES TO RACE LAPS\")\n",
@@ -1513,6 +1548,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7d5997b7",
+   "metadata": {},
+   "source": [
+    "### 5.5 Running example analysis (deprecated)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 13,
    "id": "4335b497",
@@ -1556,22 +1599,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "2689b09c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# # Run the example if executed directly\n",
-    "\n",
-    "\n",
-    "\n",
-    "# if __name__ == \"__main__\":\n",
-    "#      example_recommendations = run_example_analysis()"
+    "# example_recommendations = run_example_analysis()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f2f7a781",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2c947cb5",
+   "metadata": {},
+   "source": [
+    "## 6. Function for merging all the models."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "512b3cc0",
    "metadata": {},
    "outputs": [],
@@ -1598,10 +1652,6 @@
     "    Returns:\n",
     "        DataFrame with all recommendations\n",
     "    \"\"\"\n",
-    "    import pandas as pd\n",
-    "    import numpy as np\n",
-    "    import os\n",
-    "    import time\n",
     "    import glob\n",
     "    from datetime import datetime\n",
     "    import fastf1\n",
@@ -1990,8 +2040,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "69931908",
+   "metadata": {},
+   "source": [
+    "### 6.1 Run the analysis for all drivers using the last function "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "a42c9e44",
    "metadata": {},
    "outputs": [
@@ -3677,7 +3735,6 @@
     "    output_path = '../../outputs/week6/spain_gp_recommendations.csv'\n",
     "    \n",
     "    # Create output directory if it doesn't exist\n",
-    "    import os\n",
     "    os.makedirs(os.path.dirname(output_path), exist_ok=True)\n",
     "    \n",
     "    # Run analysis (True to extract new radios, False to reuse existing)\n",
@@ -3735,8 +3792,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "66e83de7",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fe92f156",
+   "metadata": {},
+   "source": [
+    "#### Quick checking of generated recommendations"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "82c47f7d",
    "metadata": {},
    "outputs": [
@@ -3780,7 +3853,6 @@
     }
    ],
    "source": [
-    "import pandas as pd\n",
     "\n",
     "# Load the CSV file\n",
     "recommendations = pd.read_csv('../../outputs/week6/spain_gp_recommendations.csv')\n",
