need to verify data passed to the rules in some drivers. further work needed

--- a/scripts/IS_agent/N06_rule_merging.ipynb
+++ b/scripts/IS_agent/N06_rule_merging.ipynb
@@ -2050,7 +2050,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "a42c9e44",
    "metadata": {},
    "outputs": [
@@ -19000,6 +19000,10 @@
     "    )\n",
     "    \n",
     "    return results\n",
+    "\n",
+    "## ----------------------------------------------------------------------------------\n",
+    "## NOTE: need to verify data passed to the rules in some drivers, further work needed\n",
+    "## ----------------------------------------------------------------------------------\n",
     "\n",
     "# Run if directly executed\n",
     "if __name__ == \"__main__\":\n",
