updated the notes for specifying the further work

--- a/scripts/IS_agent/N06_rule_merging.ipynb
+++ b/scripts/IS_agent/N06_rule_merging.ipynb
@@ -19002,7 +19002,8 @@
     "    return results\n",
     "\n",
     "## ----------------------------------------------------------------------------------\n",
-    "## NOTE: need to verify data passed to the rules in some drivers, further work needed\n",
+    "## NOTE: need to verify data passed to the rules in some drivers, further work needed. \n",
+    "## Detected this event in passing degradation rate to the agent.\n",
     "## ----------------------------------------------------------------------------------\n",
     "\n",
     "# Run if directly executed\n",
