--- a/scripts/IS_agent/N01_agent_setup.ipynb
+++ b/scripts/IS_agent/N01_agent_setup.ipynb
@@ -249,11 +249,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from experta import Fact, Field, KnowledgeEngine"
+    "from experta import Fact, Field, KnowledgeEngine\n",
+    "## Error of collections package: need to go to the file frozendict/__init__.py \n",
+    "## and change class frozendict(collections.Mapping) to collections.abc.Mapping\n"
    ]
   },
   {
@@ -1468,7 +1470,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.16"
+   "version": "3.10.17"
   }
  },
  "nbformat": 4,
