fixed bug of degradation rates not passing correctly

--- a/scripts/IS_agent/N01_agent_setup.ipynb
+++ b/scripts/IS_agent/N01_agent_setup.ipynb
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -356,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -379,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -403,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -434,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -520,20 +520,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Reemplaza completamente la función transform_tire_predictions en utils/N01_agent_setup.py\n",
-    "\n",
-    "def transform_tire_predictions(predictions_df, driver_number):\n",
+    "def transform_tire_predictions(predictions_df, driver_number, current_lap=None):\n",
     "    \"\"\"\n",
     "    Transform the output from predict_tire_degradation into facts for the rule engine.\n",
     "    \n",
     "    Args:\n",
     "        predictions_df (DataFrame): Output from predict_tire_degradation function\n",
     "        driver_number (int): The driver number to extract data for\n",
-    "        \n",
+    "        current_lap (int): Current race lap to filter data for\n",
+    "    \n",
     "    Returns:\n",
     "        dict: Dictionary with facts to declare\n",
     "    \"\"\"\n",
@@ -544,16 +543,60 @@
     "        print(f\"Warning: No prediction data found for driver {driver_number}\")\n",
     "        return None\n",
     "    \n",
-    "    # Get the most recent stint\n",
-    "    latest_stint = driver_data['Stint'].max()\n",
-    "    stint_data = driver_data[driver_data['Stint'] == latest_stint]\n",
+    "    # If current_lap is provided, filter data more intelligently\n",
+    "    if current_lap is not None:\n",
+    "        # Try to find data for the current lap or closest available\n",
+    "        # First, let's see if we have 'RaceLap' or similar column\n",
+    "        if 'RaceLap' in driver_data.columns:\n",
+    "            # Filter for data up to current lap\n",
+    "            available_data = driver_data[driver_data['RaceLap'] <= current_lap]\n",
+    "            if not available_data.empty:\n",
+    "                # Get the most recent data within current lap\n",
+    "                latest_race_lap = available_data['RaceLap'].max()\n",
+    "                driver_data = available_data[available_data['RaceLap'] == latest_race_lap]\n",
+    "        \n",
+    "        # Alternative: use CurrentTyreAge to estimate position in race\n",
+    "        elif 'CurrentTyreAge' in driver_data.columns:\n",
+    "            # Find the appropriate stint and tire age for current lap\n",
+    "            # Group by stint and find which stint should be active at current_lap\n",
+    "            stint_groups = driver_data.groupby('Stint')\n",
+    "            \n",
+    "            best_data = None\n",
+    "            for stint, stint_data in stint_groups:\n",
+    "                # Calculate approximate race lap for this stint data\n",
+    "                min_age = stint_data['CurrentTyreAge'].min()\n",
+    "                max_age = stint_data['CurrentTyreAge'].max()\n",
+    "                \n",
+    "                # Estimate if current_lap falls within this stint's range\n",
+    "                # This is a simplification - in real scenarios you'd have better mapping\n",
+    "                if min_age <= current_lap <= max_age:\n",
+    "                    # Find the closest tire age to current lap within this stint\n",
+    "                    closest_age = stint_data.iloc[(stint_data['CurrentTyreAge'] - current_lap).abs().argsort()[:1]]\n",
+    "                    best_data = closest_age\n",
+    "                    break\n",
+    "            \n",
+    "            if best_data is not None:\n",
+    "                driver_data = best_data\n",
+    "            else:\n",
+    "                # Fallback: use most recent data\n",
+    "                latest_stint = driver_data['Stint'].max()\n",
+    "                stint_data = driver_data[driver_data['Stint'] == latest_stint]\n",
+    "                latest_age = stint_data['CurrentTyreAge'].max()\n",
+    "                driver_data = stint_data[stint_data['CurrentTyreAge'] == latest_age]\n",
+    "    else:\n",
+    "        # Original behavior when no current_lap is provided\n",
+    "        latest_stint = driver_data['Stint'].max()\n",
+    "        stint_data = driver_data[driver_data['Stint'] == latest_stint]\n",
+    "        latest_age = stint_data['CurrentTyreAge'].max()\n",
+    "        driver_data = stint_data[stint_data['CurrentTyreAge'] == latest_age]\n",
     "    \n",
-    "    # Group predictions by current tire age (we want the most recent window)\n",
-    "    latest_age = stint_data['CurrentTyreAge'].max()\n",
-    "    latest_data = stint_data[stint_data['CurrentTyreAge'] == latest_age]\n",
+    "    # Continue with existing logic for the filtered data\n",
+    "    if driver_data.empty:\n",
+    "        print(f\"Warning: No data available for driver {driver_number} at current lap {current_lap}\")\n",
+    "        return None\n",
     "    \n",
     "    # Sort predictions by how far in the future they are\n",
-    "    future_data = latest_data.sort_values('LapsAheadPred')\n",
+    "    future_data = driver_data.sort_values('LapsAheadPred')\n",
     "    \n",
     "    # Extract future degradation rates\n",
     "    predicted_rates = future_data['PredictedDegradationRate'].tolist()\n",
@@ -561,23 +604,25 @@
     "    # Get basic info about current state\n",
     "    current_info = future_data.iloc[0]\n",
     "    \n",
-    "    # CORRECTION: Use the first predicted degradation rate as the current rate\n",
-    "    # instead of using 0.0 as a placeholder\n",
+    "    # Use the first predicted degradation rate as the current rate\n",
     "    current_degradation_rate = predicted_rates[0] if predicted_rates else 0.0\n",
-    "    print(f\"Using first predicted rate as current degradation: {current_degradation_rate}\")\n",
+    "    \n",
+    "    # Get current tire age from the filtered data\n",
+    "    current_tire_age = int(current_info['CurrentTyreAge'])\n",
+    "    \n",
+    "    print(f\"Driver {driver_number}, Lap {current_lap}: tire_age={current_tire_age}, degradation_rate={current_degradation_rate:.3f}\")\n",
     "    \n",
     "    # Create degradation fact with current and predicted data\n",
     "    degradation_fact = DegradationFact(\n",
-    "        degradation_rate=current_degradation_rate,  # Now using the actual predicted rate\n",
-    "        predicted_rates=predicted_rates  # Array of future predictions\n",
+    "        degradation_rate=current_degradation_rate,\n",
+    "        predicted_rates=predicted_rates\n",
     "    )\n",
-    "\n",
+    "    \n",
     "    # Create corresponding telemetry fact\n",
     "    telemetry_fact = TelemetryFact(\n",
-    "        tire_age=int(latest_age),\n",
+    "        tire_age=current_tire_age,\n",
     "        compound_id=int(current_info['CompoundID']),\n",
     "        driver_number=int(driver_number),\n",
-    "        # Add position if available\n",
     "        position=int(current_info.get('Position', 0))\n",
     "    )\n",
     "    \n",
@@ -593,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -635,12 +680,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "\n",
     "def get_current_degradation(telemetry_data, driver_number):\n",
     "    \"\"\"\n",
     "    Extract current degradation rate from telemetry data.\n",
@@ -681,7 +724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -730,7 +773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -778,7 +821,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -812,7 +855,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -859,7 +902,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -901,7 +944,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -972,7 +1015,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1040,7 +1083,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1153,7 +1196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1184,7 +1227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -1212,7 +1255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -1221,7 +1264,7 @@
      "text": [
       "\n",
       "=== TIRE DEGRADATION ANALYSIS ===\n",
-      "Using first predicted rate as current degradation: 0.07\n",
+      "Driver 44, Lap None: tire_age=4, degradation_rate=0.070\n",
       "Tire facts declared: {'degradation': DegradationFact(degradation_rate=0.07, predicted_rates=frozenlist([0.07, 0.09, 0.12])), 'telemetry': TelemetryFact(tire_age=4, compound_id=2, driver_number=44, position=1)}\n",
       "Engine now has 4 facts\n"
      ]
@@ -1259,7 +1302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -1304,7 +1347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -1361,7 +1404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
