fixed bug of degradation rates not passing correctly

--- a/scripts/IS_agent/N06_rule_merging.ipynb
+++ b/scripts/IS_agent/N06_rule_merging.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 36,
    "id": "e64e0abe",
    "metadata": {},
    "outputs": [
@@ -34,8 +34,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Successfully imported lap prediction module\n",
-      "Libraries and fact classes loaded successfully.\n",
       "All components imported successfully!\n"
      ]
     }
@@ -121,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 37,
    "id": "4fc51350",
    "metadata": {},
    "outputs": [],
@@ -293,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 38,
    "id": "1f8e6796",
    "metadata": {},
    "outputs": [
@@ -359,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 39,
    "id": "1c0fd9b3",
    "metadata": {},
    "outputs": [],
@@ -507,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 40,
    "id": "d62cc275",
    "metadata": {},
    "outputs": [],
@@ -691,7 +689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 41,
    "id": "5964d8d6",
    "metadata": {},
    "outputs": [],
@@ -931,7 +929,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 42,
    "id": "592d8314",
    "metadata": {},
    "outputs": [],
@@ -957,7 +955,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 43,
    "id": "4b925ee7",
    "metadata": {},
    "outputs": [],
@@ -1066,7 +1064,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 44,
    "id": "17f3c245",
    "metadata": {},
    "outputs": [],
@@ -1207,7 +1205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 45,
    "id": "6df934eb",
    "metadata": {},
    "outputs": [],
@@ -1335,7 +1333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 46,
    "id": "7c01f0ee",
    "metadata": {},
    "outputs": [],
@@ -1442,7 +1440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 47,
    "id": "17571664",
    "metadata": {},
    "outputs": [],
@@ -1547,7 +1545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 48,
    "id": "4335b497",
    "metadata": {},
    "outputs": [],
@@ -1589,7 +1587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 49,
    "id": "2689b09c",
    "metadata": {},
    "outputs": [],
@@ -1615,7 +1613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 50,
    "id": "512b3cc0",
    "metadata": {},
    "outputs": [],
@@ -2049,7 +2047,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 51,
    "id": "a42c9e44",
    "metadata": {},
    "outputs": [
@@ -2061,7 +2059,7 @@
       "================================================================================\n",
       "ANALYZING ALL DRIVERS WITH REAL RADIOS FROM 2023 SPANISH GP\n",
       "================================================================================\n",
-      "Started: 2025-06-04 14:53:32\n",
+      "Started: 2025-06-04 17:24:12\n",
       "Race data loaded: 1180 rows\n",
       "Loading existing radio metadata: ../../outputs\\week6\\radios\\spain_2023_radio_metadata.csv\n",
       "\n",
@@ -2097,11 +2095,7 @@
       "Sequences by compound: {1: 158, 2: 147, 3: 34}\n",
       "Using device: cuda\n",
       "Global model loaded from: ../../outputs/week5/models/tire_degradation_tcn.pth\n",
-      "Specialized model for compound 1 loaded\n",
-      "Specialized model for compound 2 loaded\n",
-      "Specialized model for compound 3 loaded\n",
-      "Models loaded: 1 global model and 3 specialized models\n",
-      "Prepared tensor for model: shape=torch.Size([339, 5, 16])\n"
+      "Specialized model for compound 1 loaded\n"
      ]
     },
     {
@@ -2122,6 +2116,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Specialized model for compound 2 loaded\n",
+      "Specialized model for compound 3 loaded\n",
+      "Models loaded: 1 global model and 3 specialized models\n",
+      "Prepared tensor for model: shape=torch.Size([339, 5, 16])\n",
       "Generated ensemble predictions for 339 sequences\n",
       "Formatted results: 1017 predictions for 20 drivers\n",
       "Tire predictions generated: 1017 rows\n",
@@ -26011,7 +26009,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 52,
    "id": "82c47f7d",
    "metadata": {},
    "outputs": [
@@ -26096,7 +26094,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 53,
    "id": "91b943d0",
    "metadata": {},
    "outputs": [
